--- a/src/app/routes/home/filters/filters.component.html
+++ b/src/app/routes/home/filters/filters.component.html
@@ -13,6 +13,11 @@
       <input id="onlyByMe" type="checkbox" formControlName="onlyByMe" />
       <label for="onlyByMe">Only Mine</label>
     </div>
+
+    <div class="checkbox ml-10">
+      <input id="local" type="checkbox" formControlName="local" />
+      <label for="local">Local news</label>
+    </div>
   </form>
 
   <a [routerLink]="'article/create'">Add Article</a>
