--- a/src/app/routes/article/upsert/upsert-article.component.html
+++ b/src/app/routes/article/upsert/upsert-article.component.html
@@ -43,6 +43,6 @@
 
   <div class="buttons">
     <button type="submit">Save</button>
-    <button type="button" (click)="onBack()">Cancel</button>
+    <button type="button" [disabled]="!form.valid" (click)="onBack()">Cancel</button>
   </div>
 </form>
