--- a/src/app/routes/auth/login/login.component.html
+++ b/src/app/routes/auth/login/login.component.html
@@ -1,2 +1,2 @@
-<app-user-form [submitButtonText]="login" (submit)="login($event)" (cancel)="cancel()">
+<app-user-form [submitButtonText]="'Log in'" (formSubmit)="login($event)" (cancel)="cancel()">
 </app-user-form>
