--- a/src/app/routes/auth/signup/signup.component.html
+++ b/src/app/routes/auth/signup/signup.component.html
@@ -1,2 +1,2 @@
-<app-user-form [submitButtonText]="login" (submit)="signup($event)" (cancel)="cancel()">
+<app-user-form [submitButtonText]="'Sign up'" (formSubmit)="signup($event)" (cancel)="cancel()">
 </app-user-form>
