--- a/src/app/routes/auth/form/user-form.component.html
+++ b/src/app/routes/auth/form/user-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form"
-      (ngSubmit)="submit.emit(form.value)">
+      (ngSubmit)="formSubmit.emit(form.value)">
 
-  <div class="form-gruop">
+  <div class="form-group">
     <label for="username">Username</label>
     <input type="text"
            id="username"
